--- a/Source/config.ini
+++ b/Source/config.ini
@@ -1,7 +1,7 @@
 [main]
 UseRegEx=0
 Maximize=1
-Debug=1
+Debug=0
 DebugCSV=test.csv
 
 [RegEx]
@@ -10,5 +10,5 @@ RE_Float=^[+-]?[0-9]*[,]*[0-9]+$
 RE_Date=^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d$
 
 [Oracle]
-User=U_2900Z
+User=PIKALKA
 Service=REGION19
